[package]
name = "rep"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A small tool for representation/class invariants"
homepage = "https://www.github.com/calebwin/rep"
documentation = "https://docs.rs/rep"
repository = "https://www.github.com/calebwin/rep"
keywords = ["rep", "rep_derive", "representation", "class", "invariants"]
readme = "README.md"
categories = ["data-structures", "development-tools::procedural-macro-helpers", "database", "database-implementations", "template-engine"]
license = "MIT"
edition = "2018"

[dependencies]
rep_derive = "0.1.0"
