[package]
name = "rep_derive"
version = "0.3.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A small tool for representation/class invariants"
homepage = "https://www.github.com/calebwin/rep"
documentation = "https://docs.rs/rep"
repository = "https://www.github.com/calebwin/rep"
keywords = ["rep", "rep_derive", "representation", "class", "invariants"]
categories = ["data-structures", "development-tools::procedural-macro-helpers", "database", "database-implementations", "template-engine"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.5", features = ["full"] }